--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "core-js": "^3.25.3",
+    "iubenda-module": "^0.1.2",
     "nuxt": "^2.15.8",
+    "sweetalert2": "^11.7.20",
     "vue": "^2.7.10",
-    "vue-server-renderer": "^2.7.10", 
+    "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
     "vuetify": "^2.7.0"
   },
