--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/robots": "^3.0.0",
     "core-js": "^3.25.3",
     "iubenda-module": "^0.1.2",
     "nuxt": "^2.15.8",
